# tennessee-eastman-profbraatz

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  meson.build  meson.options  pyproject.toml  requirements-dash.txt  requirements.txt  streamlit_app.py
.github/workflows/: deploy-hf.yml  tests.yml
docs/: api.md  cli.md  dashboard.md  python_backend.md  rieth2017_dataset.md
examples/: README.md  basic_simulation.py  compare_fortran_python.py  custom_fault_plugin.py  introduction.ipynb  rieth2017_dataset.py  streaming_subscriber.py
fortran/: meson.build  teprob.pyf
skillz/TEP/: SKILL.md  simulator-reference.md
src/tep/: __init__.py  detector_plugins.py  fault_base.py  fault_plugins.py  meson.build  python_backend.py  simulator.py  streaming.py
src/tep/_fortran/: meson.build
tep/: __init__.py  cli.py  constants.py  controllers.py  dashboard.py  dashboard_dash.py  dashboard_streamlit.py  disturbances.py  fortran_backend.py  integrators.py  jax_backend.py  meson.build  process.py  python_backend.py  simulator.py  thermodynamics.py
tep/_fortran/: __init__.py
tests/: test_dashboard_streamlit.py  test_disturbances.py  test_fault_plugins.py  test_fortran_validation.py  test_jax_backend.py  test_python_backend.py  test_rieth2017_dataset.py  test_simulator.py  test_thermodynamics.py
