# Install Python source files
py.install_sources(
  [
    '__init__.py',
    'cli.py',
    'constants.py',
    'controller_base.py',
    'controller_plugins.py',
    'controllers.py',
    'dashboard_dash.py',
    'detector_base.py',
    'detector_plugins.py',
    'fortran_backend.py',
    'simulator.py',
  ],
  subdir: 'tep'
)

# Process _fortran subpackage
subdir('_fortran')
